--- a/twinspot-web/.gitignore
+++ b/twinspot-web/.gitignore
@@ -39,3 +39,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# Firebase admin keys
+*.json
+
+# Devcontainer
+.devcontainer/
+
+# Node
+node_modules/
+
