--- a/twinspot-web/package.json
+++ b/twinspot-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tiptap/extension-heading": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
     "@tiptap/extension-link": "^3.14.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
