--- a/twinspot-web/package.json
+++ b/twinspot-web/package.json
@@ -20,7 +20,8 @@
     "next": "16.0.10",
     "next-seo": "^7.0.1",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
