Redesign destination detail layout and deterministic photo sourcing

--- a/twinspot-web/package.json
+++ b/twinspot-web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "NEXT_DISABLE_TURBOPACK=1 next dev",
+    "prebuild": "node scripts/generate-photo-manifest.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
